--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <div class="bg-white shadow-2xl rounded-2xl p-6 sm:p-8 max-w-md w-full text-center">
 
-    <h1 class="text-3xl sm:text-4xl font-extrabold text-pink-500 mb-4">🎂 Happy Birthday! 🎂</h1>
+    <h1 class="text-3xl sm:text-4xl font-extrabold text-pink-500 mb-4">🎂 Happy Birthday Choti Chatri 😁! 🎂</h1>
 
     <p class="text-base sm:text-lg text-gray-700 mb-6">
 
