--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
 
     <p class="text-base sm:text-lg text-gray-700 mb-6">
 
-      Wishing you a day filled with love, laughter, and everything that makes you smile.
-
-      May this year bring you happiness, success, and unforgettable memories.
+      Tum hamesha haste muskurate rho aur hamesa positive raho bas yhi ham chahte hai 😁,
 
     </p>
 
@@ -60,7 +58,7 @@
 
     <p id="surprise" class="mt-4 text-lg sm:text-xl font-semibold text-purple-600 hidden">
 
-      You are amazing! Have the best birthday ever! 💖
+      You are amazing! Have the best birthday ever! ✨💖
 
     </p>
 
