--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 
   <div class="bg-white shadow-2xl rounded-2xl p-6 sm:p-8 max-w-md w-full text-center">
 
-    <h1 class="text-3xl sm:text-4xl font-extrabold text-pink-500 mb-4">🎂 Happy Birthday Choti Chatri 😊! ✨🎂</h1>
+    <h1 class="text-3xl sm:text-4xl font-extrabold text-pink-500 mb-4">🎂 Happy Birthday Choti Chatri 😊✨🎂</h1>
 
     <p class="text-base sm:text-lg text-gray-700 mb-6">
 
-      Tum hamesha haste muskurate rho aur hamesa positive raho bas yhi ham chahte hai 😁,
+      Tum hamesha haste muskurate rho aur hamesa positive raho bas yhi ham chahte hai 😁
 
     </p>
 
@@ -58,7 +58,7 @@
 
     <p id="surprise" class="mt-4 text-lg sm:text-xl font-semibold text-purple-600 hidden">
 
-      You are amazing! Have the best birthday ever! ✨💖
+      You are amazing, Have the best birthday ever! ✨💖
 
     </p>
 
